--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name="com.max_plus.homedooropenplate.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- Required -->
     <uses-permission android:name="com.max_plus.homedooropenplate.permission.JPUSH_MESSAGE" />
@@ -57,13 +58,13 @@
         </activity>
 
         <!--<provider-->
-            <!--android:name="android.support.v4.content.FileProvider"-->
-            <!--android:authorities="com.mpl.GrowthStud.fileprovider"-->
-            <!--android:grantUriPermissions="true"-->
-            <!--android:exported="false">-->
-            <!--<meta-data-->
-                <!--android:name="android.support.FILE_PROVIDER_PATHS"-->
-                <!--android:resource="@xml/file_paths" />-->
+        <!--android:name="android.support.v4.content.FileProvider"-->
+        <!--android:authorities="com.mpl.GrowthStud.fileprovider"-->
+        <!--android:grantUriPermissions="true"-->
+        <!--android:exported="false">-->
+        <!--<meta-data-->
+        <!--android:name="android.support.FILE_PROVIDER_PATHS"-->
+        <!--android:resource="@xml/file_paths" />-->
         <!--</provider>-->
 
         <activity
@@ -90,9 +91,18 @@
         <activity
             android:name=".Activity.WenziActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".Activity.TuWenActivity" />
-        <activity android:name=".Activity.PlusImageActivity" />
-        <activity android:name=".Activity.VideoActivity"></activity>
+        <activity
+            android:name=".Activity.TuWenActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.PlusImageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.VideoActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activity.VideoRecorderActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
