--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.moushao.tech:ffmpeg-4-android:1.0.1'
 }
