--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,13 @@ android {
             path "CMakeLists.txt"
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -45,4 +51,6 @@ dependencies {
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'com.moushao.tech:ffmpeg-4-android:1.0.1'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation files('libs/jcore-android-1.2.5.jar')
 }
