--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'com.moushao.tech:ffmpeg-4-android:1.0.1'
-    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
     implementation files('libs/jcore-android-1.2.5.jar')
+    implementation 'com.github.mcxtzhang:all-base-adapter:V1.5.2'
+    implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
 }
