家长待完成，文字，图文和视频评审

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -273,7 +273,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Parent.Activity.AddChildActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".Parent.Activity.PWenZiCheckActivity" />
+        <activity android:name=".Parent.Activity.PTuWenCheckActivity" />
+        <activity android:name=".Parent.Activity.PVideoCheckActivity"></activity>
     </application>
 
 </manifest>
