--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation files('libs/jcore-android-1.2.5.jar')
     implementation 'com.github.mcxtzhang:all-base-adapter:V1.5.2'
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
+    implementation 'cz.msebera.android:httpclient:4.4.1.2'
 }
