--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -199,7 +199,7 @@
             android:name=".Student.Activity.QuestionnaireActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Student.Activity.SyatemAchieveActivity"
+            android:name=".Student.Activity.SyatemAchieveYouActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Student.Activity.WenZiInfoActivity"
@@ -297,7 +297,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Parent.Activity.AlbumMakingActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".Student.Activity.SyatemAchieveYouInfoActivity"></activity>
     </application>
 
 </manifest>
