--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -298,7 +298,9 @@
         <activity
             android:name=".Parent.Activity.AlbumMakingActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".Student.Activity.SyatemAchieveYouInfoActivity"></activity>
+        <activity android:name=".Student.Activity.SyatemAchieveYouInfoActivity" />
+        <activity android:name=".Student.Activity.SyatemAchieveXiaoActivity" />
+        <activity android:name=".Student.Activity.SyatemAchieveXiaoInfoActivity"></activity>
     </application>
 
 </manifest>
