--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -298,9 +298,21 @@
         <activity
             android:name=".Parent.Activity.AlbumMakingActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".Student.Activity.SyatemAchieveYouInfoActivity" />
-        <activity android:name=".Student.Activity.SyatemAchieveXiaoActivity" />
-        <activity android:name=".Student.Activity.SyatemAchieveXiaoInfoActivity"></activity>
+        <activity
+            android:name=".Student.Activity.SyatemAchieveYouInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Student.Activity.SyatemAchieveXiaoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Student.Activity.SyatemAchieveXiaoInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Student.Activity.SyatemAchieveChuActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Student.Activity.SyatemAchieveChuInfoActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
