--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
     implementation 'cz.msebera.android:httpclient:4.4.1.2'
     implementation 'com.yangchangfu:pickview-lib:1.0.3'
+    implementation 'com.contrarywind:wheelview:4.0.8'
 }
