--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -323,7 +323,8 @@
             android:name=".Student.Activity.MixtureActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".Student.Activity.ParentRegisterActivity" />
-        <activity android:name=".Student.Activity.PreviewDoActivity"></activity>
+        <activity android:name=".Student.Activity.PreviewDoActivity" />
+        <activity android:name=".Student.Activity.ChangeBanShiActivity"></activity>
     </application>
 
 </manifest>
