--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
     <application
         android:name=".Student.Activity.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/android_family_icon"
+        android:icon="@drawable/icon_home"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
