--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'cz.msebera.android:httpclient:4.4.1.2'
     implementation 'com.yangchangfu:pickview-lib:1.0.3'
     implementation 'com.contrarywind:wheelview:4.0.8'
+    implementation files('libs/core-3.0.0.jar')
 }
