表单内容完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -317,7 +317,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Student.Activity.FormActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity
             android:name=".Student.Activity.FormInfoActivity"
             android:screenOrientation="portrait" />
