--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,8 @@
 
     <permission
         android:name="com.mpl.GrowthStud.permission.JPUSH_MESSAGE"
-        android:protectionLevel="signature" />
-    <!-- Required  一些二维码扫描相关权限 -->
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-
-    <!-- Required  一些系统要求的权限，如访问网络等 -->
+        android:protectionLevel="signature" /> <!-- Required  一些二维码扫描相关权限 -->
+    <uses-permission android:name="android.permission.FLASHLIGHT" /> <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="com.mpl.GrowthStud.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,20 +21,16 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!-- Required -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- Required -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-
-    <!-- Optional for location -->
+    <uses-permission android:name="android.permission.VIBRATE" /> <!-- Optional for location -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 用于开启 debug 版本的应用在6.0 系统上 层叠窗口权限 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <!-- Optional. Required for location feature -->
+    <uses-permission android:name="android.permission.GET_TASKS" /> <!-- Optional. Required for location feature -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
@@ -49,6 +42,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:replace="android:theme">
+        <activity android:name=".Student.Activity.MixtureTwoActivity"></activity>
+        <activity android:name=".Student.Activity.MixtureOneActivity" />
         <activity
             android:name=".Student.Activity.MainActivity"
             android:launchMode="singleTask"
@@ -61,9 +56,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- <provider -->
+        </activity> <!-- <provider -->
         <!-- android:name="android.support.v4.content.FileProvider" -->
         <!-- android:authorities="com.mpl.GrowthStud.fileprovider" -->
         <!-- android:grantUriPermissions="true" -->
@@ -76,9 +69,7 @@
         <activity
             android:name="cn.jpush.android.ui.PopWinActivity"
             android:exported="false"
-            android:theme="@style/MyDialogStyle" />
-
-        <!-- Required SDK核心功能 -->
+            android:theme="@style/MyDialogStyle" /> <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -90,9 +81,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="com.mpl.GrowthStud" />
             </intent-filter>
-        </activity>
-
-        <!-- Required SDK 核心功能 -->
+        </activity> <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
         <service
             android:name="cn.jpush.android.service.PushService"
@@ -104,14 +93,12 @@
                 <action android:name="cn.jpush.android.intent.PushService" />
                 <action android:name="cn.jpush.android.intent.PUSH_TIME" />
             </intent-filter>
-        </service>
-        <!-- since 3.0.9 Required SDK 核心功能 -->
+        </service> <!-- since 3.0.9 Required SDK 核心功能 -->
         <provider
             android:name="cn.jpush.android.service.DataProvider"
             android:authorities="com.mpl.GrowthStud.DataProvider"
             android:exported="false"
-            android:process=":pushcore" />
-        <!-- Required SDK核心功能 -->
+            android:process=":pushcore" /> <!-- Required SDK核心功能 -->
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true"
@@ -131,12 +118,10 @@
 
                 <data android:scheme="package" />
             </intent-filter>
-        </receiver>
-        <!-- Required SDK核心功能 -->
+        </receiver> <!-- Required SDK核心功能 -->
         <receiver
             android:name="cn.jpush.android.service.AlarmReceiver"
-            android:exported="false" />
-        <!-- User defined.  For test only  用户自定义的广播接收器 -->
+            android:exported="false" /> <!-- User defined.  For test only  用户自定义的广播接收器 -->
         <receiver
             android:name=".Student.Tools.MyReceiver"
             android:enabled="true"
@@ -149,15 +134,13 @@
                 <action android:name="cn.jpush.android.intent.CONNECTION" /> <!-- 接收网络变化 连接/断开 since 1.6.3 -->
                 <category android:name="com.mpl.GrowthStud" />
             </intent-filter>
-        </receiver>
-        <!-- Required  . Enable it you can get statistics data with channel -->
+        </receiver> <!-- Required  . Enable it you can get statistics data with channel -->
         <meta-data
             android:name="JPUSH_CHANNEL"
             android:value="developer-default" />
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="f1cdfc638afc09b9a5d50e41" /> <!-- </>值来自开发者平台取得的AppKey -->
-
         <activity
             android:name=".Student.Activity.LoginActivity"
             android:screenOrientation="portrait" />
@@ -341,7 +324,7 @@
         <activity android:name=".Student.Activity.MyBookActivity" />
         <activity android:name=".Student.Activity.CloudPhotosActivity" />
         <activity android:name=".Student.Activity.TuWenTakePhotoComActivity" />
-        <activity android:name=".Student.Activity.ChangeDiTuActivity"></activity>
+        <activity android:name=".Student.Activity.ChangeDiTuActivity" />
     </application>
 
 </manifest>
