--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation files('libs/core-3.0.0.jar')
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation files('libs/imageloader.jar')
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 }
