--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -218,7 +218,7 @@
             android:name=".Student.Activity.ParentsAccountActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Student.Activity.BundleParentActivity"
+            android:name=".Student.Activity.BoundParentActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Student.Activity.MessageActivity"
@@ -332,7 +332,7 @@
             android:name=".Student.Activity.TuWenTakePhotoComActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Student.Activity.ChangeDiTuActivity"
+            android:name=".Student.Activity.ChangeBasePicActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Student.Activity.MixtureInfoActivity"
